--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/tmdt
 spring.datasource.username=root
 spring.datasource.password=Alpha2398
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 jwt.secret = $4Arfdeh%rdlk12aioi98lkdjg&&%$#Fgef****lskdsj
 spring.security.filter.order=10
