--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=Alpha2398
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 jwt.secret = $4Arfdeh%rdlk12aioi98lkdjg&&%$#Fgef****lskdsj
 spring.security.filter.order=10
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
