--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/tmdt
 spring.datasource.username=root
 spring.datasource.password=Alpha2398
@@ -6,4 +7,3 @@ spring.datasource.password=Alpha2398
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 jwt.secret = $4Arfdeh%rdlk12aioi98lkdjg&&%$#Fgef****lskdsj
 spring.security.filter.order=10
-hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
