--- a/web/package.json
+++ b/web/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "proxy": "http://localhost:8080/",
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.0",
-    "@mui/material": "^5.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +19,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
+    "react-simple-star-rating": "^4.0.5",
     "sass": "^1.52.1",
     "web-vitals": "^2.1.4"
   },
