--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "anime": "^0.1.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "js-cookie": "^3.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
@@ -21,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
     "react-simple-star-rating": "^4.0.5",
+    "reactstrap": "^9.1.2",
     "sass": "^1.52.1",
     "web-vitals": "^2.1.4"
   },
